<resources>
    <string name="app_name">C.C.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="loginError">please inspect your phonenum or password</string>
    <string name="registError">please inspect your phonenum or email</string>
    <string name="donghua">Creating Account...</string>

    <string name="menu_home">Self</string>
    <string name="menu_dicuss">My Discuss</string>
    <string name="menu_recommend">Recommend</string>
    <!--<string name="menu_slideshow">Slideshow</string>-->
    <!--<string name="menu_tools">Tools</string>-->
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_collect">self collect</string>

    <!-- Strings related to login -->
    <string name="password_err_hint">between 6 and 12 alphanumeric characters</string>
    <string name="input_pwd_hint">Please input password</string>
    <string name="input_phone_hint">Please input phonenum</string>

    <!-- Strings related to regist -->
    <string name="signupUsername">Name</string>
    <string name="signupPassword">Password</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="signupEmail">Email</string>
    <string name="signupPhoneNum">Phone Number</string>
    <string name="signupType">Type And Gender</string>
    <string name="signupCsignature">Csignature</string>
    <string name="nameLength">at least 3 characters and can not have any space!</string>
    <string name="passwordLength">between 6 and 12 alphanumeric characters!</string>
    <string name="passwordMtch">Password Do not match!</string>
    <string name="createaccount">regist</string>
    <string name="signup_success">"Sign Up Successed. You can login now."</string>
    <string name="gender">please choose your gender</string>
    <string name="app_regist">please regist</string>
    <string name="phoneNum">please filling-in your phone number</string>
    <string name="email">please filling-in your email</string>

    <!-- nav_header_main -->
    <string name="welcome">welcome to C.C. word</string>
    <string name="C.C.">C.C.word</string>

    <!-- object -->
    <string name="anime">Anime Schedule</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Finish">Finish</string>
    <string name="All">All</string>

    <string name="Developing">Developing...</string>

    <!-- user -->
    <string name="ID">ID:</string>

    <!-- discuss-->
    <string name="suggect">can not be empty</string>
    <string name="dissuccess">dicuss success</string>

    <!-- 信息修改-->
    <string name="cedit">edit success</string>
    <string name="nameedit">edit success</string>

    <!-- 网络提示-->
    <string name="client">client fails</string>
    <string name="client1">client normal</string>
    <string name="please">please wait...</string>

    <!-- 收藏-->
    <string name="collectsuccess">collect success</string>
    <string name="deletecollect">delete success</string>

    <!-- 关于-->
    <string name="about">about this</string>
    <string name="connect">Connect with us</string>
</resources>
