<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/mydis"
            android:title="@string/menu_dicuss" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/suggest"
            android:title="@string/menu_recommend" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/collect"
            android:title="@string/menu_collect" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/menu_slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_tools"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/menu_tools" />-->
    </group>

    <item android:title="@string/anime">
        <menu>
            <item
                android:id="@+id/nav_Monday"
                android:icon="@drawable/week1"
                android:title="@string/Monday" />
            <item
                android:id="@+id/nav_Tuesday"
                android:icon="@drawable/week2"
                android:title="@string/Tuesday" />
            <item
                android:id="@+id/nav_Wednesday"
                android:icon="@drawable/week4"
                android:title="@string/Wednesday" />
            <item
                android:id="@+id/nav_Thursday"
                android:icon="@drawable/week5"
                android:title="@string/Thursday" />
            <item
                android:id="@+id/nav_Friday"
                android:icon="@drawable/week6"
                android:title="@string/Friday" />
            <item
                android:id="@+id/nav_Saturday"
                android:icon="@drawable/week7"
                android:title="@string/Saturday" />
            <item
                android:id="@+id/nav_Sunday"
                android:icon="@drawable/week1"
                android:title="@string/Sunday" />
            <item
                android:id="@+id/nav_Finish"
                android:icon="@drawable/week0"
                android:title="@string/Finish" />
            <item
                android:id="@+id/nav_All"
                android:icon="@drawable/weekfinish"
                android:title="@string/All" />
        </menu>
    </item>

</menu>
