<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:zhy="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"   >

        <!--<ImageView android:src="@drawable/title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="90dp"-->
            <!--android:layout_marginBottom="0dp"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <!-- Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/signupUsername" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/signupPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Re-enter Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp">
            <EditText android:id="@+id/input_reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/reenterpassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp">
            <EditText android:id="@+id/input_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/signupPhoneNum"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/signupEmail"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="25dp">
            <EditText android:id="@+id/input_csignature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/signupCsignature"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="15dp">-->
            <!--<EditText android:id="@+id/input_type"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="text"-->
                <!--android:hint="@string/signupType"/>-->
        <!--</com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupType"
            android:id="@+id/textview"
            android:textIsSelectable="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/flowlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            zhy:max_select="3"></com.zhy.view.flowlayout.TagFlowLayout>

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/gender"-->
            <!--android:id="@+id/genderview"-->
            <!--android:textIsSelectable="true"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:visibility="visible"-->
            <!--android:layout_gravity="center_vertical"/>-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_man"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="93dp"
                android:src="@drawable/ic_man_select" />

            <ImageView
                android:id="@+id/icon_woman"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="92dp"
                android:src="@drawable/ic_woman_select" />

        </RelativeLayout>


        <!-- Signup Button -->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/createaccount"/>

        <!--<TextView android:id="@+id/link_login"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:text="@string/gotologin"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/accent"-->
            <!--android:textSize="16dip"/>-->

        <TextView android:id="@+id/signupinfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/accent"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>